--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -572,7 +572,7 @@ footer.sticky-bottom {
       }
 
       .abbr {
-        height: 2rem;
+        // height: 2rem;
         margin-bottom: 0.5rem;
 
         abbr {
